Bug 278569 - partitionmanager fails to build with parted 3.0
Summary: partitionmanager fails to build with parted 3.0
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Lanz
URL:
Keywords:
: 279777 280541 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-26 18:37 UTC by Andrea Scarpino
Modified: 2011-08-28 14:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Scarpino 2011-07-26 18:37:44 UTC
Version:           1.0.3 (using Devel) 
OS:                Linux

[ 13%] Building CXX object src/CMakeFiles/partitionmanagerprivate.dir/core/libparted.o                                                                                      
/build/src/partitionmanager-1.0.3/src/core/libparted.cpp: In function 'qint64 readSectorsUsedLibParted(PedDisk*, const Partition&)':                                        
/build/src/partitionmanager-1.0.3/src/core/libparted.cpp:131:74: error: 'ped_file_system_open' was not declared in this scope
/build/src/partitionmanager-1.0.3/src/core/libparted.cpp:135:90: error: 'ped_file_system_get_resize_constraint' was not declared in this scope
/build/src/partitionmanager-1.0.3/src/core/libparted.cpp:141:39: error: 'ped_file_system_close' was not declared in this scope
make[2]: *** [src/CMakeFiles/partitionmanagerprivate.dir/core/libparted.o] Error 1
make[1]: *** [src/CMakeFiles/partitionmanagerprivate.dir/all] Error 2
make: *** [all] Error 2

Reproducible: Always

Steps to Reproduce:
install parted 3.0, build partitionmanager

Actual Results:  
build fails

Expected Results:  
build

parted 3.0
partitionmanager 1.0.3
Comment 1 Christoph Feck 2011-08-10 12:08:27 UTC
*** Bug 279777 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2011-08-21 23:51:41 UTC
*** Bug 280541 has been marked as a duplicate of this bug. ***
Comment 3 Andreas K. Huettel 2011-08-27 17:58:34 UTC
See also same bug at https://bugs.gentoo.org/show_bug.cgi?id=369423
Comment 4 Volker Lanz 2011-08-28 13:25:18 UTC
SVN commit 1249901 by vlanz:

Make KDE Partition Manager build and work with libparted 3.x. This mostly means
anything that libparted used to do regarding file systems (mainly resizing
fat16 and fat32) is now no longer possible.

BUG:278569


 M  +16 -2     cmake/modules/FindLIBPARTED.cmake  
 M  +3 -5      src/fs/fat16.cpp  
 M  +1 -5      src/fs/hfs.cpp  
 M  +2 -5      src/fs/hfsplus.cpp  
 M  +4 -0      src/plugins/libparted/CMakeLists.txt  
 M  +11 -1     src/plugins/libparted/libpartedbackend.cpp  
 M  +21 -2     src/plugins/libparted/libpartedpartitiontable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1249901
Comment 5 Andreas K. Huettel 2011-08-28 14:24:51 UTC
Thanks a lot! Since the commit does not apply at all to 1.0.3 (it seems you've been busy in the meantime :-), it would of course be nice to have a new release sometime...
Comment 6 Volker Lanz 2011-08-28 14:50:25 UTC
It's probably non-trivial to backport this to the 1.0 branch because the code in that area has drastically changed. Also, I'm not even 100% sure if there will be another 1.0.x release.

I'm hoping for a 1.1 beta release soonish.