Make KDE Partition Manager build and work with libparted 3.x. This mostly means anything that libparted used to do regarding file systems (mainly resizing fat16 and fat32) is now no longer possible.

BUG:278569

svn path=/trunk/extragear/sysadmin/partitionmanager/; revision=1249901